# Secure-Chat

./: .gitignore
backend/: pyproject.toml  requirements.txt
backend/src/: main.py  manager.py
frontend/: package-lock.json
frontend/src/: App.jsx
